# xlslock

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
tests/: collect_xlsx_paths_test.rs  read_csv_to_array_test.rs  set_password_test.rs
