[package]
name = "xlslock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
rpassword = "7.3.1"
umya-spreadsheet = { version = "2.2.0"}
walkdir = "2"
[dev-dependencies]
office-crypto = "0.1.0"    # テストでのみ使用
calamine = "0.26.1"
tempfile = "3.6"
